fix airplane overlapping links

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -83,7 +83,7 @@ h2 {
 }
 
 #airplane {
-  margin-top: 30px;
+  margin-top: 50px;
   padding-top: 80px; // the font creeps outside of the container otherwise ¯\_(ツ)_/¯
   text-align: center;
   opacity: 0.5;
